<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/select_managed_settings" />
        
    <ToggleButton 
	    android:id="@+id/toggleWifi"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="8dp"
	    android:textOn="@string/will_disable_wifi"
	    android:textOff="@string/wifi_not_managed" />
        
    <ToggleButton 
	    android:id="@+id/toggleMobileData"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="8dp"
	    android:textOn="@string/will_disable_mobile_data"
	    android:textOff="@string/mobile_data_not_managed" />
        
    <ToggleButton 
	    android:id="@+id/toggleSounds"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="8dp"
	    android:textOn="@string/will_disable_sounds"
	    android:textOff="@string/sounds_not_managed" />

</LinearLayout>