<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:background="@drawable/widget_background">
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/connectionStatusImageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/connectionStatusImage" />

        <TextView
            android:id="@+id/connectionStatusTextView"
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom|center_horizontal"
	        android:layout_marginBottom="5dp"
	        android:textSize="12sp"
	        android:clickable="false" />
    </FrameLayout>
    
    <FrameLayout
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
        android:layout_weight="1">
        
	    <ImageButton
	        android:id="@+id/wifiStatusImageButton"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:contentDescription="@string/wifiStatusImage" />
	    
	    <TextView
	        android:id="@+id/wifiStatusTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom|center_horizontal"
	        android:layout_marginBottom="5dp"
	        android:clickable="false" >
	    </TextView>
	</FrameLayout>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/mobileDataStatusImageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/mobileDataStatusImage" />

        <TextView
            android:id="@+id/mobileDataStatusTextView"
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom|center_horizontal"
	        android:layout_marginBottom="5dp"
	        android:clickable="false" />
    </FrameLayout>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/audioStatusImageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/audioStatusImage" />

        <TextView
            android:id="@+id/audioStatusTextView"
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom|center_horizontal"
	        android:layout_marginBottom="5dp"
	        android:clickable="false" />
    </FrameLayout>

</LinearLayout>